--- a/config.json
+++ b/config.json
@@ -524,6 +524,10 @@
     {
       "ip": "192.168.124.10",
       "mac": "66:65:A3:5A:D7:8C"
+    },
+    {
+      "ip": "192.168.124.150",
+      "mac": "14:C0:50:14:6E:A5"
     }
   ]
 }
