--- a/config.json
+++ b/config.json
@@ -163,7 +163,7 @@
     },
     {
       "ip": "192.168.124.54",
-      "mac": "D2:59:C1:C2:C0:B5"
+      "mac": "E2:4D:6E:1:21:6E"
     },
     {
       "ip": "192.168.124.111",
