--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "craco": "craco start",
     "dev": "BLOCK_PROXY_DEV=1 npm run express",
     "start": "npm run express",
-    "express": "npm run cp && node ./server/express.js",
+    "express": "npm run cp && node ./server/start.js",
     "proxy": "npm run cp && node ./proxy/start.js",
     "build": "react-scripts build",
     "docker:build": "npm run build && docker build -t block-proxy .",
