--- a/config.json
+++ b/config.json
@@ -133,6 +133,7 @@
   ],
   "proxy_port": 8001,
   "web_interface_port": 8002,
+  "your_domain": "yui.cool",
   "vpn_proxy": "",
   "auth_username": "lijing",
   "auth_password": "lijing",
