--- a/config.json
+++ b/config.json
@@ -132,12 +132,14 @@
     }
   ],
   "proxy_port": 8001,
-  "web_interface_port": 8002,
+  "web_interface_port": 8003,
   "your_domain": "yui.cool",
   "vpn_proxy": "",
-  "auth_username": "",
-  "auth_password": "",
+  "auth_username": "lijing",
+  "auth_password": "lijing",
   "enable_express": "1",
+  "enable_socks5": "1",
+  "socks5_port": 8002,
   "devices": [
     {
       "ip": "192.168.124.1",
