--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "network_scanning_status": "1",
+  "network_scanning_status": "0",
   "progress_time_stamp": "1766571511705",
   "block_hosts": [
     {
@@ -144,7 +144,7 @@
   "devices": [
     {
       "ip": "192.168.124.1",
-      "mac": "66:65:A3:5A:D7:8C"
+      "mac": "FA:27:3C:E5:31:5F"
     },
     {
       "ip": "192.168.124.2",
@@ -224,11 +224,27 @@
     },
     {
       "ip": "192.168.124.10",
-      "mac": "66:65:A3:5A:D7:8C"
+      "mac": "FA:27:3C:E5:31:5F"
     },
     {
       "ip": "192.168.124.150",
       "mac": "14:C0:50:14:6E:A5"
+    },
+    {
+      "ip": "192.168.124.21",
+      "mac": "DC:97:58:D:FD:9F"
+    },
+    {
+      "ip": "192.168.124.96",
+      "mac": "EE:98:74:21:D2:73"
+    },
+    {
+      "ip": "192.168.124.107",
+      "mac": "6:26:EA:5A:9E:6C"
+    },
+    {
+      "ip": "192.168.124.128",
+      "mac": "48:F3:F3:CA:1D:E"
     }
   ]
 }
