--- a/config.json
+++ b/config.json
@@ -135,8 +135,8 @@
   "web_interface_port": 8003,
   "your_domain": "yui.cool",
   "vpn_proxy": "",
-  "auth_username": "lijing",
-  "auth_password": "lijing",
+  "auth_username": "",
+  "auth_password": "",
   "enable_express": "1",
   "enable_socks5": "1",
   "socks5_port": 8002,
