--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "block-proxy",
   "version": "0.1.2",
   "description": "Small-scale network proxy filter",
-  "bin":{
+  "bin": {
     "block-proxy": "./bin/start.js"
   },
   "dependencies": {
@@ -33,6 +33,7 @@
     "@craco/craco": "^7.1.0",
     "anyproxy": "^4.1.3",
     "axios": "^1.13.2",
+    "commander": "^14.0.2",
     "express": "^5.1.0",
     "http-proxy-agent": "^7.0.2",
     "https-proxy-agent": "^7.0.6",
