--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "block-proxy",
-  "version": "0.1.3",
-  "description": "Small-scale network proxy filter",
+  "version": "0.1.4",
+  "description": "Small-scale network mitm proxy filter",
   "bin": {
     "block-proxy": "./bin/start.js"
   },
+  "files": [
+    "bin/"
+  ],
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
