--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "block-proxy",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Small-scale network mitm proxy filter",
   "bin": {
     "block-proxy": "bin/start.js"
@@ -16,7 +16,7 @@
     "url": "git+https://github.com/jayli/block-proxy.git"
   },
   "scripts": {
-    "cp": "cp ./hack-of-anyproxy/lib/requestHandler.js ./node_modules/anyproxy/lib/",
+    "cp": "echo '---- program start ----'",
     "craco": "craco start",
     "dev": "BLOCK_PROXY_DEV=1 npm run express",
     "start": "npm run express",
@@ -31,7 +31,7 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
-    "anyproxy": "^4.1.3",
+    "@bachi/anyproxy": "^0.1.1",
     "axios": "^1.13.2",
     "commander": "^14.0.2",
     "express": "^5.1.0",
