--- a/config.json
+++ b/config.json
@@ -253,6 +253,10 @@
     {
       "ip": "192.168.124.125",
       "mac": "14:C0:50:14:6E:A5"
+    },
+    {
+      "ip": "192.168.124.72",
+      "mac": "26:B4:7A:26:1C:23"
     }
   ]
 }
