--- a/config.json
+++ b/config.json
@@ -135,8 +135,8 @@
   "web_interface_port": 8003,
   "your_domain": "yui.cool",
   "vpn_proxy": "",
-  "auth_username": "",
-  "auth_password": "",
+  "auth_username": "lijing",
+  "auth_password": "lijing",
   "enable_express": "1",
   "enable_socks5": "1",
   "socks5_port": 8002,
@@ -197,6 +197,306 @@
     {
       "ip": "192.168.124.251",
       "mac": "6E:FB:18:4D:9C:3E"
+    },
+    {
+      "ip": "192.168.240.1",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.2",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.3",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.4",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.5",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.6",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.7",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.8",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.9",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.10",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.11",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.12",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.13",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.14",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.15",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.16",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.17",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.18",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.19",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.20",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.21",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.22",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.23",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.24",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.25",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.26",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.27",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.28",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.29",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.30",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.31",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.32",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.33",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.34",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.35",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.36",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.37",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.38",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.39",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.40",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.41",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.42",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.43",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.44",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.45",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.46",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.47",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.48",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.49",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.50",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.51",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.52",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.53",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.54",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.55",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.109",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.207",
+      "mac": "32:BC:EC:7C:66:F6"
+    },
+    {
+      "ip": "192.168.240.56",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.57",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.58",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.59",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.60",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.61",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.62",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.63",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.64",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.65",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.66",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.67",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.68",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.69",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.70",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.71",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.72",
+      "mac": "0:0:0:0:4:1"
+    },
+    {
+      "ip": "192.168.240.73",
+      "mac": "0:0:0:0:4:1"
     }
   ]
 }
