--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
   },
   "scripts": {
     "cp": "echo '----- program start -----'",
+    "rm_bkconfig": "rm ./config_backup.json",
     "craco": "craco start",
     "dev": "BLOCK_PROXY_DEV=1 npm run express",
     "start": "npm run express",
     "socks5": "node ./socks5/start.js",
     "express": "npm run cp && node ./server/start.js",
     "proxy": "npm run cp && node ./proxy/start.js",
-    "build": "react-scripts build",
+    "build": "npm run rm_bkconfig && react-scripts build",
     "docker:build": "npm run build && docker build -t block-proxy .",
     "docker:build_arm": "npm run build && docker buildx build --platform linux/arm64/v8 -t block-proxy .",
     "test": "react-scripts test",
